--- a/content/04-core-concepts/10-about-hard-forks.mdx
+++ b/content/04-core-concepts/10-about-hard-forks.mdx
@@ -21,7 +21,6 @@ period, adds Shelley blocks. There was no fundamental restart point that erased
 the history of previous activities.
 
 ### What is a hard fork combinator?
-
 A combinator is a technical term used to indicate the combination of certain
 processes or things. In the case of Cardano, a hard fork combinator combines
 protocols, thereby enabling the [Byron-to-Shelley transition](https://iohk.io/en/blog/posts/2020/04/29/from-byron-to-shelley-part-one-the-testnets/) without system
@@ -38,7 +37,6 @@ combinator facilitates the transition from Shelley to Goguen and beyond by
 simplifying the previous Byron-to-Shelley evolution.
 
 ### Moving from Byron Ouroboros Classic to Shelley Ouroboros Praos
-
 Cardano Byron mainnet ran on the Ouroboros _Classic_ consensus protocol. Cardano
 Shelley mainnet, which is the current development era, transitions to a
 decentralized network running on the new Ouroboros _Praos_ consensus protocol,
@@ -106,22 +104,15 @@ With the Mary upgrade, the ledger’s accounting infrastructure processes not on
 Developers, businesses, and applications can create general purpose (fungible) or specialized (non-fungible) tokens to achieve commercial or business objectives. These might include the creation of custom payment tokens or rewards for decentralized applications; stablecoins pegged to other currencies; or unique assets that represent intellectual property. All these assets can then be traded, exchanged, or used as payment for products or services.
 
 **Further reading:**
-
 -   [Learn about native tokens](https://docs.cardano.org/native-tokens/learn)
     
 ### Alonzo: smart contract support
-
-*Alonzo* is the next protocol upgrade, as part of the Goguen development theme. It builds on top of transaction metadata, token locking, and native asset functionality to allow for functional smart contract development.
+*Alonzo* is the protocol upgrade implemented in September 2021, as part of the Goguen development theme. It builds on top of transaction metadata, token locking, and native asset functionality to enable smart contract development.
 
 This upgrade introduces a versatile platform opening up opportunities for businesses and developers, by allowing the creation of smart contracts and decentralized applications (DApps) for decentralized finance (DeFi).
 
 Such capability is enabled by adding the necessary tools and the infrastructure using the Plutus Platform. Applying a rigorous approach based on formal methods and verification, Alonzo extends the basic multi-signature scripting language (multisig) used in Cardano Shelley. Multisig is being upgraded to the Plutus Core language for more powerful and secure scripting options. For this, Alonzo implements the [extended unspent transaction output (EUTXO) accounting model](https://iohk.io/en/blog/posts/2021/03/12/cardanos-extended-utxo-accounting-model-part-2/).
 
-Alonzo is on testnet stages now, find out more by visiting:
-
--   [The Alonzo testnet](https://testnets.cardano.org/en/testnets/alonzo-testnet/)
-
 **Further reading:**
-
 -   [Smart contracts - here we come](https://iohk.io/en/blog/posts/2021/04/08/smart-contracts-%E2%80%93-here-we-come/)
 -   [Plutus: what you need to know](https://iohk.io/en/blog/posts/2021/04/13/plutus-what-you-need-to-know/)
