Add Coin Wallet to the list of other options

--- a/content/03-new-to-cardano/08-types-of-wallets.mdx
+++ b/content/03-new-to-cardano/08-types-of-wallets.mdx
@@ -169,3 +169,4 @@ Some of the possible options are:
 - [Guarda](https://guarda.com/)
 - [Tangem](https://tangem.com/)
 - [SimpleHold Wallet](https://simplehold.io/)
+- [Coin Wallet](https://coin.space/)
