--- a/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
@@ -30,10 +30,12 @@ For details of sample queries, see
 **System requirements**
 
 The system requirements for cardano-db-sync (with both db-sync and the node running on the same machine) are:
-- Any of the big, well-known Linux distributions (e.g. Debian, Ubuntu, RHEL, CentOS, Arch, etc.)
-- 16 Gigabytes of RAM.
-- 4 CPU cores.
-- 80 Gigabytes or more of disk storage (preferably SSD, which are 2-5 times faster than electro-mechanical disks).
+- Any of the big, well-known Linux distributions (e.g. Debian, Ubuntu, RHEL, CentOS, Arch, etc.).
+- 32 Gigabytes of RAM or more.
+- 4 CPU cores or more.
+- Ensure that the machine has sufficient IOPS (Input/Output Operations per Second). Ie it should be 60k IOPS or better. Lower IOPS ratings will result in slower sync times and/or falling behind the chain tip
+- 160 Gigabytes or more of disk storage (preferably SSD, which are 2-5 times faster than electro-mechanical disks).
+You can also check for updated system requirements [here](https://github.com/input-output-hk/cardano-db-sync/blob/master/Readme.md#system-requirements).
 
 The recommended configuration is to have the db-sync and the PostgreSQL server on the same machine. During syncing (getting historical data from the blockchain), there is a huge amount of data traffic between db-sync and the database. Traffic to a local database is significantly faster than traffic to a database on the LAN or remotely to another location.
 
