Updating a list of relevant research papers

--- a/content/05-explore-cardano/07-relevant-research-papers.mdx
+++ b/content/05-explore-cardano/07-relevant-research-papers.mdx
@@ -100,6 +100,8 @@ and non-fungible token standards.
 
 [System F in Agda, for fun and profit](https://iohk.io/en/research/library/papers/system-f-in-agdafor-fun-and-profit/)
 
+[Translation Certification for Smart Contracts](https://iohk.io/en/research/library/papers/translation-certification-for-smart-contracts/)
+
 ### Basho
 
 An era of optimization, improving the scalability and interoperability of the
@@ -109,15 +111,17 @@ potential to extend the network’s capabilities.
 
 **Relevant research papers:**
 
+[Proof-of-Stake Sidechains](https://eprint.iacr.org/2018/1239.pdf)
+
 [Hydra: Fast Isomorphic State Channels](https://eprint.iacr.org/2020/299.pdf)
 
-[Parallel Chains: Improving Throughput and Latency of Blockchain Protocols via Parallel Composition](https://eprint.iacr.org/2018/1119.pdf)
+[Interhead Hydra: Two Heads are Better than One](https://iohk.io/en/research/library/papers/interhead-hydratwo-heads-are-better-than-one/)
 
-[Proof-of-Stake Blockchain Protocols with Near-Optimal Throughput](https://eprint.iacr.org/2020/037.pdf)
+[Mithril: Stake-based Threshold Multisignatures](https://iohk.io/en/research/library/papers/mithrilstake-based-threshold-multisignatures/)
 
-[Ledger Combiners for Fast Settlement](https://eprint.iacr.org/2020/675.pdf)
+[Babel Fees via Limited Liabilities](https://iohk.io/en/research/library/papers/babel-fees-via-limited-liabilities/)
 
-[Proof-of-Stake Sidechains](https://eprint.iacr.org/2018/1239.pdf)
+[Djed: A Formally Verified Crypto-Backed Pegged Algorithmic Stablecoin](https://iohk.io/en/research/library/papers/djeda-formally-verified-crypto-backed-pegged-algorithmic-stablecoin/)
 
 ### Voltaire
 
@@ -131,3 +135,5 @@ future development of the blockchain.
 [A Treasury System for Cryptocurrencies: Enabling Better Collaborative Intelligence](https://eprint.iacr.org/2018/435.pdf)
 
 [Updatable Blockchains](https://eprint.iacr.org/2020/887.pdf)
+
+[SoK: Blockchain Governance](https://iohk.io/en/research/library/papers/sokblockchain-governance/)
