--- a/content/05-explore-cardano/02-cardano-architecture.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture.mdx
@@ -12,7 +12,7 @@ Cardano's eras and implementations.
 The following diagram outlines the interaction between the system components of
 Cardano:
 
-![cardano_components](Diagram_DB_Sync@2x.png)
+![cardano_components](Diagram-Cardano-Components@2x.png)
 
 ### System components
 
