--- a/content/06-cardano-components/05-cardano-db-sync.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync.mdx
@@ -11,8 +11,9 @@ Cardano DB Sync is one of the core Cardano components, which provides a convenie
 
 **Useful links for working with DB Sync**
 
+-   [System requirements](https://github.com/input-output-hk/cardano-db-sync#system-requirements)
 -   [BuildingRunning](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md): Building and running the db-sync node.
--   [Docker](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/docker.md): Instruction for docker-compose, and building the images using nix.
+-   [Using Docker](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/docker.md): Instruction for docker-compose, and building the images using nix.
 -   [Example SQL queries](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/interesting-queries.md): Some example SQL and Haskell/Esqueleto queries.
 -   [PoolOfflineData](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/pool-offline-data.md): Explanation of how stake pool offline data is retried.
 -   [Schema Documentation](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/schema.md): The database schema documentation.
