--- a/content/04-core-concepts/10-about-hard-forks.mdx
+++ b/content/04-core-concepts/10-about-hard-forks.mdx
@@ -123,4 +123,4 @@ Vasil is the protocol upgrade which will be implemented in June 2022. Named afte
 
 These improvements boost Cardano's usability and scalability by increasing the block size limit to fit more transactions per block. Developers will have a better experience while building on Cardano as Vasil will greatly reduce the complexity of creating and deploying DApps on Cardano.
 
-Plutus scripts are also a main focus of the Vasil upgrade. These scripts will live persistently on-chain so they can be referenced when needed which will improve efficiency, as ther will no longer be a need to include the script in the transaction attempting to spend its outputs.
+Plutus scripts are also a main focus of the Vasil upgrade. These scripts will live persistently on-chain so they can be referenced when needed which will improve efficiency, as there will no longer be a need to include the script in the transaction attempting to spend its outputs.
