Adding more Cardano wallets

--- a/content/03-new-to-cardano/08-types-of-wallets.mdx
+++ b/content/03-new-to-cardano/08-types-of-wallets.mdx
@@ -160,9 +160,11 @@ See
 
 **Other options**
 
-You can also consider wallets that support ada among a list of other currencies.
-Some of the possible options are:
-
+- [Nami](https://namiwallet.io/) 
+- [Eternl](https://eternl.io/app/mainnet/welcome)
+- [GeroWallet](https://gerowallet.io/)
+- [Flint](https://flint-wallet.com/) 
+- [Typhon](https://typhonwallet.io/#/)
 - [Ellipal](https://www.ellipal.com/)
 - [Infinito Wallet](https://www.infinitowallet.io/)
 - [Atomic Wallet](https://atomicwallet.io/)
