Update and rename 01-db-sync-components.mdx to 02-db-sync-components.mdx

--- a/content/06-cardano-components/05-cardano-db-sync/02-db-sync-components.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/02-db-sync-components.mdx
@@ -1,6 +1,6 @@
 ---
-title: About Cardano DB Sync and its components
-metaTitle: About Cardano DB Sync and its components
+title: DB Sync components
+metaTitle: DB Sync components
 ---
 
 ### Architecture of Cardano DB Sync
