--- a/content/06-cardano-components/05-cardano-db-sync/01-about-db-sync.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/01-about-db-sync.mdx
@@ -11,8 +11,8 @@ Cardano DB Sync is one of the core Cardano components, which provides a convenie
 
 **Some useful resources**
 
--   DB Sync set-up
--   DB Sync best practices
+-   [DB Sync set-up](https://docs.cardano.org/cardano-components/cardano-db-sync/db-sync-set-up)
+-   [DB Sync best practices](https://docs.cardano.org/cardano-components/cardano-db-sync/best-practices)
 -   [PoolOfflineData](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/pool-offline-data.md): explanation of stake pool offline data usage.
 -   [Schema documentation](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/schema.md): the database schema documentation.
 -   [Schema management](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/schema-management.md): how the database schema is managed and modified.
