--- a/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -64,7 +64,7 @@ See more examples in [this Data Studio report](https://datastudio.google.com/rep
 
 The cost for querying data from BigQuery is paid by an individual querying it. BigQuery charges an amount analogous to the amount of the data being queried.
 
-Usually, the cost is $5 per one table of the data queried. Find more information by visiting the [BigQuery pricing page](https://cloud.google.com/bigquery/pricing).
+Usually, the cost is $5 terabyte (TB) of the data queried. Find more information by visiting the [BigQuery pricing page](https://cloud.google.com/bigquery/pricing).
 
 > **Note** that Cardano data tables are divided by epoch numbers so that queries can be made according to the epoch of choice, incurring less costs.
 
