More fixes and formatting tweaks

--- a/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -22,7 +22,7 @@ There are several things you should note when working with BigQuery:
 
 ## Getting started with BigQuery
 
-To get started, go to the [IOG data analytics dataset](https://console.cloud.google.com/bigquery?project=iog-data-analytics&supportedpurview=project&ws=!1m4!1m3!3m2!1siog-data-analytics!2scardano_mainnet).
+**To get started, go to the [IOG data analytics dataset](https://console.cloud.google.com/bigquery?project=iog-data-analytics&supportedpurview=project&ws=!1m4!1m3!3m2!1siog-data-analytics!2scardano_mainnet).**
 
 Note that to start querying data, you need to have a Google project. In case you don’t have a Google project:
 
@@ -64,7 +64,7 @@ See more examples in [this Data Studio report](https://datastudio.google.com/rep
 
 The cost for querying data from BigQuery is paid by an individual querying it. BigQuery charges an amount analogous to the amount of the data being queried.
 
-Usually, the cost is $5 terabyte (TB) of the data queried. Find more information by visiting the [BigQuery pricing page](https://cloud.google.com/bigquery/pricing).
+Usually, the cost is $5 per terabyte (TB) of the data queried. Find more information by visiting the [BigQuery pricing page](https://cloud.google.com/bigquery/pricing).
 
 > **Note** that Cardano data tables are divided by epoch numbers so that queries can be made according to the epoch of choice, incurring less costs.
 
