--- a/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -18,7 +18,7 @@ Cardano data on BigQuery is organized by epoch numbers. This allows limiting que
 There are several things you should note when working with BigQuery:
 
 1. The data is fetched (updated) from DB Sync every two hours.
-2. The data is only updated to approximately last 20 blocks before the current block height in DB Sync. This is essential to prevent rollbacks of blocks in the case of chain forks.
+2. The data is only updated to approximately the last 20 blocks before the current block height in DB Sync. This is essential to prevent rollbacks of blocks in the case of chain forks.
 
 ## Getting started with BigQuery
 
