--- a/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -5,7 +5,7 @@ metaTitle: Cardano blockchain data on BigQuery
 
 ## About BigQuery
 
-According to its [official description](https://cloud.google.com/bigquery/docs/introduction), [BigQuery](https://docs.google.com/document/d/1-FsNfVGE-gR5VF7pVTp_7wmJgJjOt5AJYTOjI--7WUk/edit#) is a fully managed enterprise data warehouse that helps to manage and analyze data with built-in features like machine learning, geospatial analysis, and business intelligence. BigQuery's serverless architecture allows using SQL queries to get the data you are looking for with zero infrastructure management.
+According to its [official description](https://cloud.google.com/bigquery/docs/introduction), BigQuery is a fully managed enterprise data warehouse that helps to manage and analyze data with built-in features like machine learning, geospatial analysis, and business intelligence. BigQuery's serverless architecture allows using SQL queries to get the data you are looking for with zero infrastructure management.
 
 **Motivation**
 
