adding email address for sharing feedback

--- a/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -317,3 +317,4 @@ The list of outputs are triples of `slot_no`, `txidx`, and `index`, which identi
 
 The current release does not include all the blockchain data, particularly the staking and staking rewards details. In its future iterations, this dataset on BigQuery will cover all the Cardano data, and we will be updating this section with more details.
 
+To raise an issue or share your feedback, please reach out to data-analytics@iohk.io. 
