--- a/content/05-explore-cardano/03-cardano-network/03-p2p-networking.mdx
+++ b/content/05-explore-cardano/03-cardano-network/03-p2p-networking.mdx
@@ -15,7 +15,7 @@ In the Byron federated system, nodes were connected by a static configuration th
 
 To ensure efficient communication between nodes, it is essential to enable automated connections of SPO relays to each other, so that less static configuration is needed. This is currently being accomplished through upgrades to the network stack, which will ultimately enable a full P2P topology for all Cardano nodes. P2P communication will enhance the flow of information between nodes, thus reducing (and ultimately removing) the network’s reliance on the federated nodes, and enabling complete decentralization of the Cardano network.
 
-> **Note**: The P2P deployment is currently in testing stages. The team is focused on the delivery of final features for SPOs and the preparation of QuickCheck simulation tests. The full P2P deployment will happen later in 2021. This documentation describes the P2P functionality for information purposes only ahead of this release.
+> **Note**: The P2P deployment is currently in testing stages. The team is focused on the delivery and testing of final features. The full P2P deployment will happen later in 2022. This documentation describes the P2P functionality for information purposes only ahead of the release.
 
 ### P2P capabilities
 
