--- a/content/04-core-concepts/14-multiple-transactions.mdx
+++ b/content/04-core-concepts/14-multiple-transactions.mdx
@@ -4,7 +4,7 @@ metaTitle: 'Submitting multiple transactions'
 metaDescription: 'Submitting multiple transactions'
 ---
 
-This section outlies some best practices for submitting multiple transactions. Users who need to submit many transactions one after the other can run into a problem when the mempool becomes full. This is known as high throughput. If the user continues to submit transactions after the mempool becomes full, some transactions may not be accepted.
+This section outlines some best practices for submitting multiple transactions. Users who need to submit many transactions one after the other can run into a problem when the mempool becomes full. This is known as high throughput. If the user continues to submit transactions after the mempool becomes full, some transactions may not be accepted.
 
 The system as a whole has never guaranteed the reliability of transaction submission. It is impossible to provide such a guarantee in a distributed system like Cardano. Submitting agents are required to handle resubmission logic in an appropriate way.
 
