--- a/content/06-cardano-components/05-cardano-db-sync/04-best-practices.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/04-best-practices.mdx
@@ -38,7 +38,7 @@ See how to efficiently use snapshots here:
     
 ### Using a --disable-ledger flag for faster syncing times
 
-A `--disable-ledger` parameter is a new feature that has been recently added to DB Sync, and is now in its beta version. The upcoming DB Sync version will be compatible with node v.1.35.0-rc4 bringing an option to disable the ledger state. This means that users who don’t require syncing reward details, historical stake data, epoch parameters, etc will be able to run a much lighter version of DB Sync. This will dramatically decrease DB Sync syncing times and RAM requirements. 
+A `--disable-ledger` parameter is a new feature that has been recently added to DB Sync, and is now in its beta version. The upcoming DB Sync version will be compatible with node v.1.35.0-rc4 bringing an option to disable the ledger state. This means that users who don’t require syncing reward details, historical stake data, epoch parameters, etc will be able to run a much lighter version of DB Sync. This will dramatically decrease DB Sync syncing times and RAM requirements, reducing memory usage by up to 9GB on mainnet. 
 
 See the configuration:
 
