--- a/content/03-new-to-cardano/08-types-of-wallets.mdx
+++ b/content/03-new-to-cardano/08-types-of-wallets.mdx
@@ -119,3 +119,4 @@ See
 - [Tangem](https://tangem.com/)
 - [SimpleHold Wallet](https://simplehold.io/)
 - [Coin Wallet](https://coin.space/)
+- [NuFi](https://nu.fi%5D%28https://nu.fi/) 
