Minor prose changes

--- a/content/05-explore-cardano/02-cardano-architecture.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture.mdx
@@ -77,7 +77,7 @@ only requests more work when it is ready, rather than having work _pushed_ upon
 it.
 
 The protocol design is modular and evolvable: version negotiation is used to
-agree the set of mini-protocols to use, which allows additional or updated
+agree on the set of mini-protocols to use, which allows additional or updated
 mini-protocols to be added over time without causing compatibility issues.
 
 #### Node-to-Client IPC
@@ -128,7 +128,7 @@ The CLI tool can:
 
 ### Daedalus wallet
 
-Daedalus is a full node wallet that helps users to manage their ada, and can
+Daedalus is a full node wallet that helps users to manage their Ada, and can
 send and receive payments on the Cardano blockchain. Daedalus consists of a
 wallet frontend and a backend. The frontend is the graphical application that
 users see and interact with. The backend is a service process that monitors the
