--- a/content/07-native-tokens/03-getting-started.mdx
+++ b/content/07-native-tokens/03-getting-started.mdx
@@ -57,10 +57,8 @@ cardano-cli ...
 
 cardano-node version 1.35.0 and later of the cli no longer supports ASCII token names, only hex-encoded format is supported. The result of running  
 
-
 ```
 $ echo -n "assetName" | xxd -ps
-
 ```
 
 Lovelace values can be specified in two ways:
@@ -162,18 +160,7 @@ This section describes how to manually mint a new native token ('melcoin') using
  
 #### Pre-requisites 
 
-1. Download the node and config files for the public testnet using this code:
-
-```bash
-wget https://hydra.iohk.io/build/16159630/download/1/cardano-node-1.35.0-linux.tar.gz
-tar xzvf cardano-node-1.35.0-linux.tar.gz
-mkdir lpconfig && cd lpconfig
-wget https://hydra.iohk.io/build/13695229/download/1/testnet-config.json
-wget https://hydra.iohk.io/build/13695229/download/1/testnet-byron-genesis.json
-wget https://hydra.iohk.io/build/13695229/download/1/testnet-shelley-genesis.json
-wget https://hydra.iohk.io/build/13695229/download/1/testnet-topology.json
-cd ..
-```
+1. Download the latest version of cardano-node from the releases page (https://github.com/input-output-hk/cardano-node/releases) and config files for the public testnet from the Cardano World (https://book.world.dev.cardano.org/environments.html)
 
 2. Run the cardano-node:
 
@@ -305,7 +292,6 @@ $ echo -n "melcoin" | xxd -ps
 6d656c636f696e
 
 ./cardano-cli transaction build-raw \
-	     --babbage-era \
              --fee 0 \
              --tx-in b1ddb0347fed2aecc7f00caabaaf2634f8e2d17541f6237bbed78e2092e1c414#0 \
              --tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+1000000000+"1000000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
@@ -337,12 +323,11 @@ The transaction will now include the fee:
 ```
 
 ./cardano-cli transaction build-raw \
-	     --babbage-era \
-             --fee 180109 \
-             --tx-in b1ddb0347fed2aecc7f00caabaaf2634f8e2d17541f6237bbed78e2092e1c414#0 \
-             --tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+999819891+"1000000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
-             --mint="1000000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
-             --out-file matx.raw
+--fee 180109 \
+--tx-in b1ddb0347fed2aecc7f00caabaaf2634f8e2d17541f6237bbed78e2092e1c414#0 \
+--tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+999819891+"1000000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
+--mint="1000000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
+--out-file matx.raw
 
 ```
 
@@ -350,12 +335,12 @@ The transaction will now include the fee:
 
 ```
 ./cardano-cli transaction sign \
-	     --signing-key-file pay.skey \
-	     --signing-key-file policy/policy.skey \
-	     --script-file policy/policy.script \
-	     --testnet-magic 1097911063 \
-	     --tx-body-file matx.raw \
-         --out-file matx.signed
+--signing-key-file pay.skey \
+--signing-key-file policy/policy.skey \
+--script-file policy/policy.script \
+--testnet-magic 1097911063 \
+--tx-body-file matx.raw \
+ --out-file matx.signed
 
 ```
 
@@ -390,8 +375,8 @@ mkdir recipient
 
 ```
 cardano-cli address key-gen \
-    --verification-key-file recipient/recipientpay.vkey \
-    --signing-key-file recipient/recipientpay.skey
+--verification-key-file recipient/recipientpay.vkey \
+--signing-key-file recipient/recipientpay.skey
 ```    
 
 3. Derive the payment address:
@@ -411,12 +396,11 @@ addr_test1vp8s8zu6mr73nvlsjf935k0a38n8xvp3fptkyz2vl8pserqkcx5yz
 
 ```bash
 ./cardano-cli transaction build-raw \
-	     --babbage-era \
-             --fee 0 \
-             --tx-in fd0790f3984348f65ee22f35480b873b4eb9862065514f3e3a9c0f04d0a6ad63#0 \
-             --tx-out addr_test1vp8s8zu6mr73nvlsjf935k0a38n8xvp3fptkyz2vl8pserqkcx5yz+10000000+"1 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
-             --tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+999821915+"999000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
-             --out-file rec_matx.raw
+--fee 0 \
+--tx-in fd0790f3984348f65ee22f35480b873b4eb9862065514f3e3a9c0f04d0a6ad63#0 \
+--tx-out addr_test1vp8s8zu6mr73nvlsjf935k0a38n8xvp3fptkyz2vl8pserqkcx5yz+10000000+"1 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
+--tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+999821915+"999000000 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
+--out-file rec_matx.raw
 ```
 
 5. Calculate the minimum fee.
@@ -435,12 +419,11 @@ Use this code to calculate the minimum fee for the transaction:
 178393 Lovelace
 
 ./cardano-cli transaction build-raw \
-	     --babbage-era \
-             --fee 178393 \
-             --tx-in fd0790f3984348f65ee22f35480b873b4eb9862065514f3e3a9c0f04d0a6ad63#0 \
-             --tx-out addr_test1vp8s8zu6mr73nvlsjf935k0a38n8xvp3fptkyz2vl8pserqkcx5yz+10000000+"1 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
-             --tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+989643522+"999999999 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
-             --out-file rec_matx.raw
+--fee 178393 \
+--tx-in fd0790f3984348f65ee22f35480b873b4eb9862065514f3e3a9c0f04d0a6ad63#0 \
+--tx-out addr_test1vp8s8zu6mr73nvlsjf935k0a38n8xvp3fptkyz2vl8pserqkcx5yz+10000000+"1 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
+--tx-out addr_test1vqvlku0ytscqg32rpv660uu4sgxlje25s5xrpz7zjqsva3c8pfckz+989643522+"999999999 328a60495759e0d8e244eca5b85b2467d142c8a755d6cd0592dff47b.6d656c636f696e" \
+--out-file rec_matx.raw
 ```
 
 #### Sign the transaction
@@ -448,10 +431,10 @@ Use this code to calculate the minimum fee for the transaction:
 Sign the transaction using the keys generated earlier:
 ```
 ./cardano-cli transaction sign \
-	     --signing-key-file pay.skey \
-	     --testnet-magic 1097911063 \
-	     --tx-body-file rec_matx.raw \
-         --out-file rec_matx.signed
+--signing-key-file pay.skey \
+--testnet-magic 1097911063 \
+--tx-body-file rec_matx.raw \
+--out-file rec_matx.signed
 ```
 
 #### Submit the transaction
@@ -468,7 +451,6 @@ Note that we must send more than 1000000 Lovelace in the transaction. This minim
 ```bash
 $ cat lpconfig/launchpad-shelley-genesis.json | grep minUTxOValue
         "minUTxOValue": 1000000,
-
 ```
 
 #### Check the UTXO for address addr_test1vp8s8zu6mr73nvlsjf935k0a38n8xvp3fptkyz2vl8pserqkcx5yz:
@@ -506,12 +488,12 @@ TX_BODY_FILE=...
 TX_FILE=...
 
 cardano-cli transaction sign \
-        	--signing-key-file "$SPENDING_KEY" \
-        	--signing-key-file "$MINTING_KEY" \
-        	--script-file "$SCRIPT" \
-        	--testnet-magic 3 \
-        	--tx-body-file  "$TX_BODY_FILE" \
-        	--out-file  	"$TX_FILE"
+--signing-key-file "$SPENDING_KEY" \
+--signing-key-file "$MINTING_KEY" \
+--script-file "$SCRIPT" \
+--testnet-magic 3 \
+--tx-body-file  "$TX_BODY_FILE" \
+--out-file  	"$TX_FILE"
 ```
 
 Here, `$SPENDING_KEY` is the key that allows spending from `$UTXO`, and `$MINTING_KEY` is the key that hashes to the value specified in the `$SCRIPT`.
@@ -555,17 +537,16 @@ TX_BODY_FILE_1=...
 TX_FILE_1=...
  
 cardano-cli transaction build-raw \
-        	--mary-era \
-        	--fee 0 \
-        	--tx-in "$TXID"#0 \
-          	--tx-out="$ADDR+$LOVELACE+5 $POLICYID.couttscoin" \
-        	--out-file "$TX_BODY_FILE_1"
+--fee 0 \
+--tx-in "$TXID"#0 \
+--tx-out="$ADDR+$LOVELACE+5 $POLICYID.636f75747473636f696e" \
+--out-file "$TX_BODY_FILE_1"
  
 cardano-cli transaction sign \
-        	--signing-key-file "$SPENDING_KEY" \
-         	--testnet-magic 1097911063 \
-        	--tx-body-file  "$TX_BODY_FILE_1" \
-        	--out-file  	"$TX_FILE_1"
+--signing-key-file "$SPENDING_KEY" \
+--testnet-magic 1097911063 \
+--tx-body-file  "$TX_BODY_FILE_1" \
+--out-file  	"$TX_FILE_1"
  
 cardano-cli transaction submit --tx-file "$TX_FILE_1" --testnet-magic 1097911063
 ```
@@ -594,21 +575,19 @@ TX_BODY_FILE_2=...
 TX_FILE_2=...
  
 cardano-cli transaction build-raw \
-        	--mary-era \
-        	--fee 0 \
-        	--tx-in "$TXID1"#0 \
-          	--tx-out="$ADDR+$LOVELACE" \
-         	--mint="-5 $POLICYID.couttscoin" \
-       	--out-file "$TX_BODY_FILE_2"
+--fee 0 \
+--tx-in "$TXID1"#0 \
+--tx-out="$ADDR+$LOVELACE" \
+--mint="-5 $POLICYID.636f75747473636f696e" \
+--out-file "$TX_BODY_FILE_2"
  
 cardano-cli transaction sign \
-        	--signing-key-file "$SPENDING_KEY" \
-         	--signing-key-file "$MINTING_KEY" \
-        	--script-file "$SCRIPT" \
- 
-        	--testnet-magic 3 \
-        	--tx-body-file  "$TX_BODY_FILE_2" \
-        	--out-file  	"TX_FILE_2"
+--signing-key-file "$SPENDING_KEY" \
+--signing-key-file "$MINTING_KEY" \
+--script-file "$SCRIPT" \
+--testnet-magic 1097911063 \
+--tx-body-file  "$TX_BODY_FILE_2" \
+--out-file  	"TX_FILE_2"
  
 cardano-cli transaction submit --tx-file  "$TX_FILE_2" --testnet-magic 1097911063
 ```
