--- a/content/05-explore-cardano/02-cardano-architecture.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture.mdx
@@ -128,7 +128,7 @@ The CLI tool can:
 
 ### Daedalus wallet
 
-Daedalus is a full node wallet that helps users to manage their Ada, and can
+Daedalus is a full node wallet that helps users to manage their ada, and can
 send and receive payments on the Cardano blockchain. Daedalus consists of a
 wallet frontend and a backend. The frontend is the graphical application that
 users see and interact with. The backend is a service process that monitors the
