replacing an image

--- a/content/05-explore-cardano/02-cardano-architecture.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture.mdx
@@ -12,7 +12,7 @@ Cardano's eras and implementations.
 The following diagram outlines the interaction between the system components of
 Cardano:
 
-![cardano_components](Diagram-Cardano-Components@2x.png)
+![cardano_components](https://ucarecdn.com/3756645a-a4a2-4d2f-846a-e454bf7cba60/)
 
 ### System components
 
